--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Party Heartbeat
-author=elkcarc
-support=
+author=elkcarc,JaccodR
+support=https://github.com/elkcarc/party-heartbeat/issues
 description=See if party members have disconnected
 tags=combat,hardcore,disconnection,plugin,heartbeat,party,hcim,notify,notification,overlay
 plugins=com.PartyHeartbeat.PartyHeartbeatPlugin
