--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Party Heartbeat
-author=elkcarc,JaccodR
+author=elkcarc, Scowled
 support=https://github.com/elkcarc/party-heartbeat/issues
 description=See if party members have disconnected
 tags=combat,hardcore,disconnection,plugin,heartbeat,party,hcim,notify,notification,overlay
